myantlr/Projet_WhileParser.java
package myantlr;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class Projet_WhileParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "FUNCTION", "INPUT", "DEFINITION", "EXPRESSION", "CONDITION", "COMANDES", "OUTPUT", "WHILE", "FOR", "FOREACH", "IF", "VARIABLE", "VAR_LIST", "EXP_LIST", "AFFECTATION", "SYMBOL", "TL", "HD", "LIST", "CONS", "WS", "Maj", "Min", "Dec", "Variable", "Symbol", "'function'", "':'", "'read'", "'%'", "'write'", "','", "';'", "'nop'", "':='", "'if'", "'then'", "'else'", "'fi'", "'while'", "'do'", "'od'", "'for'", "'foreach'", "'in'", "'nil'", "'('", "'cons'", "')'", "'hd'", "'tl'", "'list'", "'=?'"
    };
    public static final int EOF=-1;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int FUNCTION=4;
    public static final int INPUT=5;
    public static final int DEFINITION=6;
    public static final int EXPRESSION=7;
    public static final int CONDITION=8;
    public static final int COMANDES=9;
    public static final int OUTPUT=10;
    public static final int WHILE=11;
    public static final int FOR=12;
    public static final int FOREACH=13;
    public static final int IF=14;
    public static final int VARIABLE=15;
    public static final int VAR_LIST=16;
    public static final int EXP_LIST=17;
    public static final int AFFECTATION=18;
    public static final int SYMBOL=19;
    public static final int TL=20;
    public static final int HD=21;
    public static final int LIST=22;
    public static final int CONS=23;
    public static final int WS=24;
    public static final int Maj=25;
    public static final int Min=26;
    public static final int Dec=27;
    public static final int Variable=28;
    public static final int Symbol=29;

    // delegates
    // delegators


        public Projet_WhileParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public Projet_WhileParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return Projet_WhileParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g"; }


    public static class function_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "function"
    // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:45:1: function : 'function' Symbol ':' definition -> ^( Symbol definition ) ;
    public final function_return function() throws RecognitionException {
        function_return retval = new function_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal1=null;
        Token Symbol2=null;
        Token char_literal3=null;
        definition_return definition4 = null;


        Object string_literal1_tree=null;
        Object Symbol2_tree=null;
        Object char_literal3_tree=null;
        RewriteRuleTokenStream stream_Symbol=new RewriteRuleTokenStream(adaptor,"token Symbol");
        RewriteRuleTokenStream stream_30=new RewriteRuleTokenStream(adaptor,"token 30");
        RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
        RewriteRuleSubtreeStream stream_definition=new RewriteRuleSubtreeStream(adaptor,"rule definition");
        try {
            // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:45:11: ( 'function' Symbol ':' definition -> ^( Symbol definition ) )
            // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:45:13: 'function' Symbol ':' definition
            {
            string_literal1=(Token)match(input,30,FOLLOW_30_in_function217);  
            stream_30.add(string_literal1);

            Symbol2=(Token)match(input,Symbol,FOLLOW_Symbol_in_function219);  
            stream_Symbol.add(Symbol2);

            char_literal3=(Token)match(input,31,FOLLOW_31_in_function221);  
            stream_31.add(char_literal3);

            pushFollow(FOLLOW_definition_in_function223);
            definition4=definition();

            state._fsp--;

            stream_definition.add(definition4.getTree());


            // AST REWRITE
            // elements: Symbol, definition
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 45:46: -> ^( Symbol definition )
            {
                // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:45:49: ^( Symbol definition )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_Symbol.nextNode(), root_1);

                adaptor.addChild(root_1, stream_definition.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "function"

    public static class definition_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "definition"
    // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:46:1: definition : 'read' input '%' commands '%' 'write' output -> ^( INPUT input ) commands ^( OUTPUT output ) ;
    public final definition_return definition() throws RecognitionException {
        definition_return retval = new definition_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal5=null;
        Token char_literal7=null;
        Token char_literal9=null;
        Token string_literal10=null;
        input_return input6 = null;

        commands_return commands8 = null;

        output_return output11 = null;


        Object string_literal5_tree=null;
        Object char_literal7_tree=null;
        Object char_literal9_tree=null;
        Object string_literal10_tree=null;
        RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
        RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
        RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
        RewriteRuleSubtreeStream stream_output=new RewriteRuleSubtreeStream(adaptor,"rule output");
        RewriteRuleSubtreeStream stream_input=new RewriteRuleSubtreeStream(adaptor,"rule input");
        RewriteRuleSubtreeStream stream_commands=new RewriteRuleSubtreeStream(adaptor,"rule commands");
        try {
            // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:47:2: ( 'read' input '%' commands '%' 'write' output -> ^( INPUT input ) commands ^( OUTPUT output ) )
            // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:47:4: 'read' input '%' commands '%' 'write' output
            {
            string_literal5=(Token)match(input,32,FOLLOW_32_in_definition240);  
            stream_32.add(string_literal5);

            pushFollow(FOLLOW_input_in_definition242);
            input6=input();

            state._fsp--;

            stream_input.add(input6.getTree());
            char_literal7=(Token)match(input,33,FOLLOW_33_in_definition245);  
            stream_33.add(char_literal7);

            pushFollow(FOLLOW_commands_in_definition247);
            commands8=commands();

            state._fsp--;

            stream_commands.add(commands8.getTree());
            char_literal9=(Token)match(input,33,FOLLOW_33_in_definition249);  
            stream_33.add(char_literal9);

            string_literal10=(Token)match(input,34,FOLLOW_34_in_definition251);  
            stream_34.add(string_literal10);

            pushFollow(FOLLOW_output_in_definition253);
            output11=output();

            state._fsp--;

            stream_output.add(output11.getTree());


            // AST REWRITE
            // elements: output, input, commands
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 47:50: -> ^( INPUT input ) commands ^( OUTPUT output )
            {
                // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:47:53: ^( INPUT input )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(INPUT, "INPUT"), root_1);

                adaptor.addChild(root_1, stream_input.nextTree());

                adaptor.addChild(root_0, root_1);
                }
                adaptor.addChild(root_0, stream_commands.nextTree());
                // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:47:77: ^( OUTPUT output )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(OUTPUT, "OUTPUT"), root_1);

                adaptor.addChild(root_1, stream_output.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "definition"

    public static class input_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "input"
    // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:48:1: input : ( inputSub | );
    public final input_return input() throws RecognitionException {
        input_return retval = new input_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        inputSub_return inputSub12 = null;



        try {
            // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:48:7: ( inputSub | )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==Variable) ) {
                alt1=1;
            }
            else if ( (LA1_0==33) ) {
                alt1=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }
            switch (alt1) {
                case 1 :
                    // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:48:9: inputSub
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_inputSub_in_input279);
                    inputSub12=inputSub();

                    state._fsp--;

                    adaptor.addChild(root_0, inputSub12.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:48:19: 
                    {
                    root_0 = (Object)adaptor.nil();

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "input"

    public static class inputSub_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "inputSub"
    // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:49:1: inputSub : Variable ( ',' Variable )* -> ( ^( Variable ) )+ ;
    public final inputSub_return inputSub() throws RecognitionException {
        inputSub_return retval = new inputSub_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token Variable13=null;
        Token char_literal14=null;
        Token Variable15=null;

        Object Variable13_tree=null;
        Object char_literal14_tree=null;
        Object Variable15_tree=null;
        RewriteRuleTokenStream stream_35=new RewriteRuleTokenStream(adaptor,"token 35");
        RewriteRuleTokenStream stream_Variable=new RewriteRuleTokenStream(adaptor,"token Variable");

        try {
            // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:49:9: ( Variable ( ',' Variable )* -> ( ^( Variable ) )+ )
            // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:49:11: Variable ( ',' Variable )*
            {
            Variable13=(Token)match(input,Variable,FOLLOW_Variable_in_inputSub288);  
            stream_Variable.add(Variable13);

            // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:49:21: ( ',' Variable )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==35) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:49:22: ',' Variable
            	    {
            	    char_literal14=(Token)match(input,35,FOLLOW_35_in_inputSub292);  
            	    stream_35.add(char_literal14);

            	    Variable15=(Token)match(input,Variable,FOLLOW_Variable_in_inputSub295);  
            	    stream_Variable.add(Variable15);


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);



            // AST REWRITE
            // elements: Variable
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 49:38: -> ( ^( Variable ) )+
            {
                if ( !(stream_Variable.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_Variable.hasNext() ) {
                    // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:49:42: ^( Variable )
                    {
                    Object root_1 = (Object)adaptor.nil();
                    root_1 = (Object)adaptor.becomeRoot(stream_Variable.nextNode(), root_1);

                    adaptor.addChild(root_0, root_1);
                    }

                }
                stream_Variable.reset();

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "inputSub"

    public static class output_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "output"
    // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:50:1: output : Variable ( ',' Variable )* -> ( ^( Variable ) )+ ;
    public final output_return output() throws RecognitionException {
        output_return retval = new output_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token Variable16=null;
        Token char_literal17=null;
        Token Variable18=null;

        Object Variable16_tree=null;
        Object char_literal17_tree=null;
        Object Variable18_tree=null;
        RewriteRuleTokenStream stream_35=new RewriteRuleTokenStream(adaptor,"token 35");
        RewriteRuleTokenStream stream_Variable=new RewriteRuleTokenStream(adaptor,"token Variable");

        try {
            // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:50:7: ( Variable ( ',' Variable )* -> ( ^( Variable ) )+ )
            // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:50:8: Variable ( ',' Variable )*
            {
            Variable16=(Token)match(input,Variable,FOLLOW_Variable_in_output310);  
            stream_Variable.add(Variable16);

            // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:50:17: ( ',' Variable )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==35) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:50:18: ',' Variable
            	    {
            	    char_literal17=(Token)match(input,35,FOLLOW_35_in_output313);  
            	    stream_35.add(char_literal17);

            	    Variable18=(Token)match(input,Variable,FOLLOW_Variable_in_output314);  
            	    stream_Variable.add(Variable18);


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);



            // AST REWRITE
            // elements: Variable
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 50:31: -> ( ^( Variable ) )+
            {
                if ( !(stream_Variable.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_Variable.hasNext() ) {
                    // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:50:35: ^( Variable )
                    {
                    Object root_1 = (Object)adaptor.nil();
                    root_1 = (Object)adaptor.becomeRoot(stream_Variable.nextNode(), root_1);

                    adaptor.addChild(root_0, root_1);
                    }

                }
                stream_Variable.reset();

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "output"

    public static class commands_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "commands"
    // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:54:1: commands : command ( ';' command )* -> ^( COMANDES ( command )+ ) ;
    public final commands_return commands() throws RecognitionException {
        commands_return retval = new commands_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal20=null;
        command_return command19 = null;

        command_return command21 = null;


        Object char_literal20_tree=null;
        RewriteRuleTokenStream stream_36=new RewriteRuleTokenStream(adaptor,"token 36");
        RewriteRuleSubtreeStream stream_command=new RewriteRuleSubtreeStream(adaptor,"rule command");
        try {
            // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:54:9: ( command ( ';' command )* -> ^( COMANDES ( command )+ ) )
            // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:54:10: command ( ';' command )*
            {
            pushFollow(FOLLOW_command_in_commands331);
            command19=command();

            state._fsp--;

            stream_command.add(command19.getTree());
            // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:54:18: ( ';' command )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==36) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:54:19: ';' command
            	    {
            	    char_literal20=(Token)match(input,36,FOLLOW_36_in_commands334);  
            	    stream_36.add(char_literal20);

            	    pushFollow(FOLLOW_command_in_commands336);
            	    command21=command();

            	    state._fsp--;

            	    stream_command.add(command21.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);



            // AST REWRITE
            // elements: command
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 54:33: -> ^( COMANDES ( command )+ )
            {
                // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:54:36: ^( COMANDES ( command )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(COMANDES, "COMANDES"), root_1);

                if ( !(stream_command.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_command.hasNext() ) {
                    adaptor.addChild(root_1, stream_command.nextTree());

                }
                stream_command.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "commands"

    public static class command_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "command"
    // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:56:1: command : ( ( 'nop' ) | ( vars ':=' exprs ) -> ^( AFFECTATION vars ':=' exprs ) | ( 'if' expression 'then' commands ( 'else' commands )? 'fi' ) -> ^( IF 'if' expression 'then' commands ( 'else' commands )? 'fi' ) | ( 'while' expression 'do' commands 'od' ) -> ^( WHILE 'while' expression 'do' commands 'od' ) | ( 'for' expression 'do' commands 'od' ) -> ^( FOR ^( CONDITION expression ) commands ) | ( 'foreach' Variable 'in' expression 'do' commands 'od' ) -> ^( FOREACH 'foreach' Variable 'in' expression 'do' commands 'od' ) );
    public final command_return command() throws RecognitionException {
        command_return retval = new command_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal22=null;
        Token string_literal24=null;
        Token string_literal26=null;
        Token string_literal28=null;
        Token string_literal30=null;
        Token string_literal32=null;
        Token string_literal33=null;
        Token string_literal35=null;
        Token string_literal37=null;
        Token string_literal38=null;
        Token string_literal40=null;
        Token string_literal42=null;
        Token string_literal43=null;
        Token Variable44=null;
        Token string_literal45=null;
        Token string_literal47=null;
        Token string_literal49=null;
        vars_return vars23 = null;

        exprs_return exprs25 = null;

        expression_return expression27 = null;

        commands_return commands29 = null;

        commands_return commands31 = null;

        expression_return expression34 = null;

        commands_return commands36 = null;

        expression_return expression39 = null;

        commands_return commands41 = null;

        expression_return expression46 = null;

        commands_return commands48 = null;


        Object string_literal22_tree=null;
        Object string_literal24_tree=null;
        Object string_literal26_tree=null;
        Object string_literal28_tree=null;
        Object string_literal30_tree=null;
        Object string_literal32_tree=null;
        Object string_literal33_tree=null;
        Object string_literal35_tree=null;
        Object string_literal37_tree=null;
        Object string_literal38_tree=null;
        Object string_literal40_tree=null;
        Object string_literal42_tree=null;
        Object string_literal43_tree=null;
        Object Variable44_tree=null;
        Object string_literal45_tree=null;
        Object string_literal47_tree=null;
        Object string_literal49_tree=null;
        RewriteRuleTokenStream stream_44=new RewriteRuleTokenStream(adaptor,"token 44");
        RewriteRuleTokenStream stream_45=new RewriteRuleTokenStream(adaptor,"token 45");
        RewriteRuleTokenStream stream_46=new RewriteRuleTokenStream(adaptor,"token 46");
        RewriteRuleTokenStream stream_Variable=new RewriteRuleTokenStream(adaptor,"token Variable");
        RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
        RewriteRuleTokenStream stream_48=new RewriteRuleTokenStream(adaptor,"token 48");
        RewriteRuleTokenStream stream_38=new RewriteRuleTokenStream(adaptor,"token 38");
        RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
        RewriteRuleTokenStream stream_40=new RewriteRuleTokenStream(adaptor,"token 40");
        RewriteRuleTokenStream stream_41=new RewriteRuleTokenStream(adaptor,"token 41");
        RewriteRuleTokenStream stream_42=new RewriteRuleTokenStream(adaptor,"token 42");
        RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");
        RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
        RewriteRuleSubtreeStream stream_exprs=new RewriteRuleSubtreeStream(adaptor,"rule exprs");
        RewriteRuleSubtreeStream stream_vars=new RewriteRuleSubtreeStream(adaptor,"rule vars");
        RewriteRuleSubtreeStream stream_commands=new RewriteRuleSubtreeStream(adaptor,"rule commands");
        try {
            // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:56:8: ( ( 'nop' ) | ( vars ':=' exprs ) -> ^( AFFECTATION vars ':=' exprs ) | ( 'if' expression 'then' commands ( 'else' commands )? 'fi' ) -> ^( IF 'if' expression 'then' commands ( 'else' commands )? 'fi' ) | ( 'while' expression 'do' commands 'od' ) -> ^( WHILE 'while' expression 'do' commands 'od' ) | ( 'for' expression 'do' commands 'od' ) -> ^( FOR ^( CONDITION expression ) commands ) | ( 'foreach' Variable 'in' expression 'do' commands 'od' ) -> ^( FOREACH 'foreach' Variable 'in' expression 'do' commands 'od' ) )
            int alt6=6;
            switch ( input.LA(1) ) {
            case 37:
                {
                alt6=1;
                }
                break;
            case Variable:
                {
                alt6=2;
                }
                break;
            case 39:
                {
                alt6=3;
                }
                break;
            case 43:
                {
                alt6=4;
                }
                break;
            case 46:
                {
                alt6=5;
                }
                break;
            case 47:
                {
                alt6=6;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }

            switch (alt6) {
                case 1 :
                    // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:56:10: ( 'nop' )
                    {
                    root_0 = (Object)adaptor.nil();

                    // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:56:10: ( 'nop' )
                    // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:56:11: 'nop'
                    {
                    string_literal22=(Token)match(input,37,FOLLOW_37_in_command357); 
                    string_literal22_tree = (Object)adaptor.create(string_literal22);
                    adaptor.addChild(root_0, string_literal22_tree);


                    }


                    }
                    break;
                case 2 :
                    // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:57:4: ( vars ':=' exprs )
                    {
                    // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:57:4: ( vars ':=' exprs )
                    // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:57:5: vars ':=' exprs
                    {
                    pushFollow(FOLLOW_vars_in_command365);
                    vars23=vars();

                    state._fsp--;

                    stream_vars.add(vars23.getTree());
                    string_literal24=(Token)match(input,38,FOLLOW_38_in_command367);  
                    stream_38.add(string_literal24);

                    pushFollow(FOLLOW_exprs_in_command369);
                    exprs25=exprs();

                    state._fsp--;

                    stream_exprs.add(exprs25.getTree());

                    }



                    // AST REWRITE
                    // elements: vars, 38, exprs
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 57:22: -> ^( AFFECTATION vars ':=' exprs )
                    {
                        // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:57:25: ^( AFFECTATION vars ':=' exprs )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(AFFECTATION, "AFFECTATION"), root_1);

                        adaptor.addChild(root_1, stream_vars.nextTree());
                        adaptor.addChild(root_1, stream_38.nextNode());
                        adaptor.addChild(root_1, stream_exprs.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 3 :
                    // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:58:4: ( 'if' expression 'then' commands ( 'else' commands )? 'fi' )
                    {
                    // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:58:4: ( 'if' expression 'then' commands ( 'else' commands )? 'fi' )
                    // C:\\Users\\luis\\Desktop\\TLC\\Projet_While.g:58:5: 'if' expression 'then' commands ( 'else' commands )? 'fi'
                    {
                    string_literal26=(Token)match(input,39,FOLLOW_39_in_command388);  
                    stream_39.add(string_literal26);

                    pushFollow(FOLLOW_expression_in_command390);
                    expression27=expression();

                    state._fsp--;

                    stream_expression.add(expression27.getTree());
                    string_literal28=(Token)match(input,40,FOLLOW_40_in_command392);  
                    stream_40.add(string_literal28);
